--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -16,6 +16,8 @@ $header-shrink-height: 70px;
 $box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 
 $colors: (
+  'yellow': #dcd463,
+  'red': #d03b42,
   'blue': #4267b2,
   'orange': #fbb96b,
   'pink': #fe7e73,
