use redux to make modal-view, cart-view, management cart

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -83,6 +83,10 @@
         @include tablet {
           margin-left: 10px;
         }
+
+        .cart-items {
+          font-size: 18px;
+        }
       }
 
       @include mobile {
