--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -12,3 +12,5 @@
 @import './components/catalog';
 @import './components/custom-checkbox';
 @import './components/product';
+@import './components/product-view-modal';
+@import './components/cart';
